Fixed typo and auctions sql query

--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-        <form method="post" th:action="@{/singup}">
+        <form method="post" th:action="@{/signup}">
             <p>
                 <label for="username">Username:</label>
                 <input id="username" type="text" name="username">
