Added DTOs, auction and bid creation, admin panel, manager panel

--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Sign up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <div class="container">
-        <form method="post" th:action="@{/signup}">
-            <p>
-                <label for="username">Username:</label>
-                <input id="username" type="text" name="username">
-            </p>
-            <p>
-                <label for="password">Password:</label>
-                <input id="password" type="password" name="password">
-            </p>
-            <button class="btn btn-primary" type="submit">Sing up</button>
-        </form>
+    <div class="row justify-content-center">
+        <div class="col-12 d-flex justify-content-center">
+            <form method="post" th:action="@{/signup}">
+                <p>
+                    <label for="username">Username:</label>
+                    <br>
+                    <input id="username" th:type="text" name="username" th:minlength="1"  th:maxlength="45" required>
+                </p>
+                <p>
+                    <label for="password">Password:</label>
+                    <br>
+                    <input id="password" th:type="password" name="password" th:minlength="8" th:maxlength="64" required>
+                </p>
+                <button class="btn btn-primary" type="submit">Sign up</button>
+            </form>
+        </div>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
